finished initial setup how user package