@@ -21,28 +21,30 @@ public class UserDTO {
     private String connection;
     private List<String> opinionTitles;
     private List<String> commentedOpinionTitles;
-    private List<String> likedOpinionTitles;
+    private List<UUID> likesMade;
 
     public static UserDTO fromUser(User user) {
         List<CommentDTO> commentDTOS = user.getComments()
                 .stream()
                 .map(CommentDTO::fromComment)
-                .collect(Collectors.toList());
+                .toList();
 
         return new UserDTO(user.getUserID(),
                 user.getUsername(),
                 user.getEmail(),
                 user.getRole(),
                 user.getOpenIDConnectProvider(),
-                user.getOpinions().stream()
+                user.getOpinions()
+                        .stream()
                         .map(Opinion::getTitle)
                         .toList(),
-                commentDTOS.stream()
+                commentDTOS
+                        .stream()
                         .map(CommentDTO::getOpinionTitle)
                         .toList(),
-                user.getLikes().stream()
+                user.getLikes()
+                        .stream()
                         .map(Like::getLikeID)
-                        .map(UUID::toString)
                         .toList()
         );
 
